--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
         </header>
         <main>
-            <div class="banner">
+            <div class="banner container">
                 <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
 
                 <button data-modal-open class="banner__button" type="button">
