corrected desktop footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -316,11 +316,11 @@
             </div>
         </main>
 
-        <footer>
+        <footer class="footer">
             <div class="container">
                 <div class="footer-container">
                     <div class="footer-container__address-bottom">
-                        <a class="logo" href="">WebStudio</a>
+                        <a class="logo__bottom" href="">WebStudio</a>
                         <address class="footer-container__address">
                             695 Park Ave, New York, NY 10065,
                             <br />United States
