--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="section">
                     <ul class="highlights">
                         <li class="highlights__item">
-                            <svg class="highlights__icon" >
+                            <svg class="highlights__icon" height="95px">
                                 <use
                                     href="./images/icons.svg#icon-antennablue"
                                     height="70px"
