fixed flex highlight

--- a/index.html
+++ b/index.html
@@ -107,12 +107,14 @@
                 <div class="section">
                     <ul class="highlights">
                         <li class="highlights__item">
+                            <div class="highlights__back">
                             <svg class="highlights__icon" height="95px">
                                 <use
                                     href="./images/icons.svg#icon-antennablue"
                                     height="70px"
                                 ></use>
                             </svg>
+                        </div>
                             <h3 class__highlights-header>ATTENTION TO DETAILS</h3>
                             <span class="highlights__desc">
                                 We go into all the details and processes of your
@@ -121,12 +123,13 @@
                         </li>
 
                         <li class="highlights__item">
+                            <div class="highlights__back">
                             <svg class="highlights__icon" height="95px">
                                 <use
                                     href="./images/icons.svg#icon-clockblue"
                                     height="70px"
                                 ></use>
-                            </svg>
+                            </svg></div>
 
                             <h3>PUNCTUALITY</h3>
                             <span class="highlights__desc">
@@ -137,12 +140,13 @@
                         </li>
 
                         <li class="highlights__item">
+                            <div class="highlights__back">
                             <svg class="highlights__icon" height="95px">
                                 <use
                                     href="./images/icons.svg#icon-diagramblue"
                                     height="70px"
                                 ></use>
-                            </svg>
+                            </svg></div>
 
                             <h3>PLANNING</h3>
                             <span class="highlights__desc">
@@ -153,12 +157,14 @@
                         </li>
 
                         <li class="highlights__item">
+                            <div class="highlights__back">
                             <svg class="highlights__icon" height="95px">
                                 <use
                                     href="./images/icons.svg#icon-astroblue"
                                     height="70px"
                                 ></use>
                             </svg>
+                            </div>
                             <h3>MODERN TECHNOLOGIES</h3>
 
                             <span class="highlights__desc"
